--- a/documento.tex
+++ b/documento.tex
@@ -184,7 +184,7 @@
 		%\input{elementos-textuais/1Introdução}
         \input{elementos-textuais/espacos-funcoes-mensuraveis}
         \input{elementos-textuais/teoria-medida}
-        %\input{elementos-textuais/teoria-integracao}
+        \input{elementos-textuais/teoria-integracao}
         %\input{elementos-textuais/considerações-finais}
         %Elementos pós-textuais	
 	\bibliography{elementos-pos-textuais/referencias}
