--- a/documento.tex
+++ b/documento.tex
@@ -182,8 +182,8 @@
 	%Elementos textuais
 	\textual
 		%\input{elementos-textuais/1Introdução}
-        \input{elementos-textuais/espacos-funcoes-mensuraveis}
-        \input{elementos-textuais/teoria-medida}
+        %\input{elementos-textuais/espacos-funcoes-mensuraveis}
+        %\input{elementos-textuais/teoria-medida}
         \input{elementos-textuais/teoria-integracao}
         %\input{elementos-textuais/considerações-finais}
         %Elementos pós-textuais	
