--- a/elementos-pos-textuais/referencias.bib
+++ b/elementos-pos-textuais/referencias.bib
@@ -73,6 +73,14 @@ publisher = "Blucher"
    year =      {1976},
    series =    {International series in pure and applied mathematics},
    edition =   {3d ed}}
+   
+  @book{lucas,
+   title =     {Geometria Euclidiana Plana},
+   author =    {João Lucas Marques Barbosa},
+   publisher = {Sociedade Brasileira de Matemática},
+   isbn =      {8585818026; 9788585818029},
+   year =      {2006},
+   series =    {Coleção do Professor de Matemática;}}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 @article{BROLEZZI,
